--- a/resources/assets/sass/home/_home_top_section.scss
+++ b/resources/assets/sass/home/_home_top_section.scss
@@ -77,7 +77,7 @@
     }
   }
   .believe-section {
-    padding-bottom: 60px;
+    padding-bottom: 0;
     max-width: 900px;
     margin: auto;
     margin-top: -120px;
